# tech_challenge

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.app  Dockerfile.training  Makefile  README.md  SECURITY.md  metrics_report.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: deploy_architecture.md  model_card.md  monitoring.md
notebooks/: 01_eda_baseline.ipynb  02_mlp copy.ipynb  02_mlp.ipynb  02_mlp_pytorch.ipynb  mlflow.db
scripts/: get-health.sh  post-predict-batch.sh  post-predict-single.sh
src/: mlflow.db
src/app/: main.py
src/app/api/: health.py  predict.py
src/app/middleware/: logger.py
src/app/utils/: logger.py  machine_learning.py  project.py
src/enums/: dataset_type.py
src/infra/: alb.tf  ecr.tf  ecs.tf  iam.tf  outputs.tf  s3.tf  sagemaker.tf  terraform.tfvars  variables.tf  vpc.tf
src/ml/: evaluate.py  train.py
src/ml/entities/: analysis.py
src/ml/pipeline/: builder.py
src/ml/services/: dataframe_service.py  mlflow_service.py  preprocessing_service.py
src/ml/utils/: architecture.py  loaders.py
src/model/: architecture.py
src/model/artifacts/: model.pth  pipeline.pkl
src/pipeline/: builder.py
src/services/: dataframe_service.py  mlflow_service.py  preprocessing_service.py
src/training/: evaluate.py  train.py
src/utils/: encoders.py  feature_identifier.py  loaders.py
tests/e2e/app/: test_predict.py
tests/unit/app/: test_main.py
tests/unit/ml/: test_dataframe_service.py  test_encoders.py  test_feature_identifier.py  test_loaders.py  test_train.py  (+2 more)
(+38 files in other folders)
