[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "churn-prediction"
version = "0.1.0"
description = "Churn prediction MLP — FIAP Pós Tech ML Grupo 102"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
# E402: import-not-at-top — training scripts manipulam sys.path antes dos imports internos
# E731: lambda-assignment — usado pontualmente em loaders
ignore = ["E501", "E402", "E731"]

